--- a/Cats_vs_Dogs_Classification_with_TensorFlow_2.ipynb
+++ b/Cats_vs_Dogs_Classification_with_TensorFlow_2.ipynb
@@ -47,7 +47,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5AhPe1u1HJjB",
-        "outputId": "e22107ac-0647-4c0a-a816-9e59937e55ef"
+        "outputId": "e22107ac-0647-4c0a-a816-9e59937e55ef",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -3364,7 +3365,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qHGYD1__HJjC",
-        "outputId": "4af8c9e6-89c8-4797-fff0-c84bc50aeafb"
+        "outputId": "4af8c9e6-89c8-4797-fff0-c84bc50aeafb",
+        "collapsed": true
       },
       "outputs": [
         {
